Fixed the text in the edit summary box being the wrong font and size
In Firefox at least...

--- a/modules/ve/init/mw/styles/ve.init.mw.ViewPageTarget.css
+++ b/modules/ve/init/mw/styles/ve.init.mw.ViewPageTarget.css
@@ -206,7 +206,8 @@
 	margin: 0;
 	padding: 0;
 	resize: none;
-	font-size: 0.8em
+	font-size: 0.8em;
+	font-family: sans-serif;
 }
 
 .ve-init-mw-viewPageTarget-saveDialog-editSummary:focus {
